# avif.io

./: .env  .eslintrc  .gitignore  LICENSE.MD  README.md  contentlayer.config.js  disavow.txt  firebase.json  next-sitemap.config.js  next-sitemap.js  next.config.js  package-lock.json  package.json  styles.css  tailwind.config.js  tsconfig.json
blog/articles/: av1.mdx  avif-browser-support.mdx  avif-converters.mdx  avif-faq.mdx  avif-photography.mdx  avif-to-jpg.mdx  avif-to-png.mdx  image-formats.mdx  optimize-images-for-web-performance.mdx
blog/comparisons/: avif-vs-bmp.mdx  avif-vs-gif.mdx  avif-vs-heif.mdx  avif-vs-jpeg2000.mdx  avif-vs-jpegxl.mdx  avif-vs-jpegxr.mdx  avif-vs-jpg.mdx  avif-vs-png.mdx  avif-vs-svg.mdx  avif-vs-webp.mdx  avif-vs-webp2.mdx
blog/faq/: avif-animation.mdx  avif-benefits.mdx  avif-better-codec.mdx  avif-bitdepth.mdx  avif-chromasubsampling.mdx  avif-colorspace.mdx  avif-creation.mdx  avif-creator.mdx  avif-decoding.mdx  avif-downsides.mdx  avif-encoding.mdx  (+23 more)
components/: Conversion.tsx  DownloadButton.tsx  Dropzone.tsx  Link.tsx  MDXComponents.tsx  SettingsBox.tsx
conversion/: Cargo.toml  glue.js  webpack.config.js
converter/: Cargo.toml
converter/src/: lib.rs
lib/: meta.json
pages/: _app.tsx  _document.tsx  index.tsx  privacy-policy.tsx
public/: avif.js  rss.xml  sitemap-0.xml  worker.js
scripts/: images.js  rss.js  rss.mjs  sitemap.js
styles/: global.css
utils/: ConversionTimeEstimator.ts  allPosts.ts  avifSupportCheck.ts  converter.ts  cookies.ts  mdx.ts  rss.js  sharp.js  utils.ts  webpToRgba.ts  webp_wasm.js
(+464 files in other folders)
