[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
rav1e = "0.5"
avif-serialize = "0.8.1"
image = {version = "0.24.6", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "bmp", "hdr", "dxt", "dds", "farbfeld"]}
js-sys = "0.3.64"
web-sys = {version = "0.3.64", features = ["console"], optional = true}
rgb = "0.8.25"
kamadak-exif = "0.5.5"
imageproc = "0.23.0"
rayon = "1.7.0"